fix alignment of date headings

--- a/src/components/pages/ResumePrint/ResumePrint.module.css
+++ b/src/components/pages/ResumePrint/ResumePrint.module.css
@@ -84,7 +84,7 @@
   font-size: 0.8rem;
   display: inline-block;
   position: absolute;
-  top: 6px;
+  top: 5px;
 }
 
 .roleHeading {
